# Changelog
# $Id$
nn-nn-14 - Version 5.1.35

  - Fix for Bug#73595 (19465516), Replace usage of StringBuffer in JDBC driver.

  - Fix for Bug#18925727, SQL INJECTION IN MYSQL JDBC DRIVER.

  - Fix for Bug#74998 (20112694), readRemainingMultiPackets not computed correctly for rows larger than 16 MB.

11-03-14 - Version 5.1.34

  - Fix for Bug#73012 (19219158), Precedence between timezone options is unclear.

  - Implement support for connecting through SOCKS proxies (WL#8105). Connection properties supporting this are socksProxyHost, socksProxyPort.

  - Ant buildfile reworked to fix incompatibilities with latest Eclipse, to remove dependency from ant-contrib and to improve structure and documentation.

  - Fix for Bug#18474141, TESTSUITE.FABRIC TEST CASES FAIL IF NO FABRIC.TESTSUITE PROPERTIES PROVIDED

  - Fix for Bug#19383371, CONNECT USING MYSQL_OLD_PASSWORD USER FAILS WHEN PWD IS BLANK

09-29-14 - Version 5.1.33

  - Fix for Bug#17441747, C/J DOESN'T SUPPORT XA RECOVER OUTPUT FORMAT CHANGED IN MYSQL 5.7.
    Test case was disabled for affected server versions 5.7.0 - 5.7.4.

  - Fix for Bug#19145408, Error messages may not be interpreted according to the proper character set

  - Fix for Bug#19505524, UNIT TEST SUITE DOES NOT CONSIDER ALL THE PARAMETERS PASSED TO BUILD.XML.

  - Fix for Bug#73474 (19365473), Invalid empty line in MANIFEST.MF

  - Fix for Bug#70436 (17527948), Incorrect mapping of windows timezone to Olson timezone.
    TimeZone mappings were revised in order to use latest data from IANA Time Zone Database and Unicode CLDR.

  - Fix for Bug73163 (19171665), IndexOutOfBoundsException thrown preparing statement.
    Regression test added. Fix was included in patch from 5.1.32: "Fix for failing tests when running test suite with Java 6+".

  - Added support for gb18030 character set

  - Fix for Bug#73663 (19479242), utf8mb4 does not work for connector/j >=5.1.13
