@@ -2,6 +2,8 @@
 # $Id$
 nn-nn-14 - Version 5.1.35
 
+  - Fix for Bug#75168 (20204783), loadBalanceExceptionChecker interface cannot work using JDBC4/JDK7.
+
   - Fix for Bug#73595 (19465516), Replace usage of StringBuffer in JDBC driver.
 
   - Fix for Bug#18925727, SQL INJECTION IN MYSQL JDBC DRIVER.
